# claytonhickey_me

./: .gitignore  Cargo.toml  README.md  cardViewer.js  common.css  default.nix  dune-project  entry.ml  flake.nix  home-body.html  main.ml  min.shell  nav.js  no_dune.ml  shell.nix  stuff.js  styles.css  update.sh  watch.sh
assets/: styles.css
blogs-v0/a-theoretical-algorithm-for-deciding-bail/: index.html
blogs-v0/my-user-control-focused-stack/: index.html
blogs-v1/handling-comments-attempt-2/: index.html
blogs-v1/language-learning-log-week-1/: duolingo.gltf  index.html  week-1-thumb.blend
blogs-v1/language-learning-log-week-2/: index.html
blogs-v1/language-learning-log-week-3/: index.html
blogs-v1/language-learning-log-week-4/: index.html  week-4-progress.kra
blogs-v1/language-learning-log-week-5/: index.html
blogs-v1/language-learning-log-week-6/: index.html
blogs-v1/language-learning-log-week-7/: index.html
blogs-v1/language-learning-log-week-8/: index.html
blogs-v1/language-learning-log-week-9/: index.html
blogs-v1/mathematical-proof-you-should-just-start-reading-in-your-target-language/: Re:Zero-recognition-graph.kra  index.html
blogs-v1/my-current-projects/: index.html
copy/: cardViewer.js  common.css  mastodonComments.js  stuff.js
copy/scripts/: multilingual.js  nav.js
games/arc-2/: index.html
how-should-bail-algorithms-be-used/: index.html
includes/: home-body.html  more-nodes.html
includes/blogs-v0/recommendation-algorithms-and-ethics/: index.html
includes/blogs-v1/custom-notebook-binders/: index.html
includes/blogs-v1/how-I-added-multiple-languages-to-my-blog/: index.html
includes/blogs-v1/language-learning-log-week-10/: index.html
lib/: dune
migrations/2021-07-05-151410_create blog_posts/: down.sql  up.sql
migrations/2021-07-05-183532_test_blog_posts/: down.sql  up.sql
migrations/2021-07-06-184028_add_blog_post_thumbnails/: down.sql  up.sql
my-first-semester-as-a-upenn-student/: index.html
scripts/: multilingual.js  nav.js
src/: blog_post.rs  contributions.rs  experiences.rs  lib.rs  main.rs  projects.rs  schema.rs  skills.rs  socials.rs
test/: dune
www/: cardViewer.js  common.css  index.html  mastodonComments.js  nav.js  rss.xml  sitemap.xml  stuff.js
www/blog/: index.html
www/more-nodes/: index.html
www/notes/: index.html
www/services/: index.html
(+30 files in other folders)
