[package]
name = "claytonhickey_me"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { git = "https://github.com/clay53/chrono", rev = "c1a7339" }
dotenv = "0.15.0"
maud = { version = "0.23" }
fs_extra = "1.2"